# sunlo

./: .env.example  .gitignore  .lintstagedrc.js  .lintstagedrc.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  20250830180001_add_daily_review_goal.sql  CHANGELOG.md  CLAUDE.md  GEMINI.md  MICROCOPY-INVENTORY.md  MIGRATION-PLAN.md  README.md  code-rules.md  deno.json  docker-compose.yaml  eslint.config.js  index.html  middleware.ts  package.json  playwright.ci.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  prettier.config.mjs  scenes.config.js  todo.md  todo.txt  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vercel.json  vite-plugin-strip-test-code.md  vite-plugin-strip-test-code.ts  vite.config.example.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.husky/: pre-commit
contexts/: 2026-01-09-work-doc.md  2026-01-10-public-mode.md  2026-01-12-misc-work-doc.md  2026-01-13-work-doc.md  2026-01-15-work-doc.md  2026-01-16-work-doc.md  2026-01-17-work-doc.md  2026-01-18-work-doc.md  2026-02-scenetest-feature-requests.md  MIGRATION-PLAN.md  completed-items.md  dx-improvements-and-bugfixes.md  instructions-for-coding-agent.md
docs/: convex-migration.md  database.md  deployment.md  mutations.md  styling.md  testing.md
e2e/: auth.setup.ts  comment-thread-flow.spec.ts  example.spec.ts  global-setup.ts  login-flow.spec.ts
src/: main.tsx  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
(+1105 files in other folders)
